daikon/UglyNum/result.txt
./UglyNum.java:21: error: variable i is already defined in method __Loop_Invariant_Dummy1(int,int,int[],int)
    /*@ requires (\forall int i; (0 <= i && i <= factors.length-1) ==> (factors[i] == 2 || factors[i] == 3 || factors[i] == 5)); */
                              ^
./UglyNum.java:22: error: variable i is already defined in method __Loop_Invariant_Dummy1(int,int,int[],int)
    /*@ requires (\forall int i, j; (0 <= i && i <= factors.length-1 && 0 <= j && j <= factors.length-1) ==> ((i+1 == j) ==> (factors[i] < factors[j]))); */
                              ^
./UglyNum.java:28: error: variable i is already defined in method __Loop_Invariant_Dummy1(int,int,int[],int)
    /*@ ensures (\forall int i; (0 <= i && i <= factors.length-1) ==> (factors[i] == 2 || factors[i] == 3 || factors[i] == 5)); */
                             ^
./UglyNum.java:29: error: variable i is already defined in method __Loop_Invariant_Dummy1(int,int,int[],int)
    /*@ ensures (\forall int i, j; (0 <= i && i <= factors.length-1 && 0 <= j && j <= factors.length-1) ==> ((i+1 == j) ==> (factors[i] < factors[j]))); */
                             ^
4 errors
